--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <style>
     body {
-      background-color: blue;
+      background-color: yellow;
     }
     h1 {
-      color: black;
+      color: blue;
       text-align: center;
     }
   </style>
@@ -14,7 +14,10 @@
 </head>
 <body>
   <h1>Before we begin I want to make a proposal. This repository is absolutely free. Withat being said. I will ask you one time before I begin flooding this page
-  with ads and shortlinks, Please let me help you and also help myself get</h1><a href="https://freebitco.in/static/html/token/user.html?r=39118524">Freebitco.in</a>
+  with ads and shortlinks, Please let me help you and also help myself get</h1>
+  <form action="https://freebitco.in/static/html/token/user.html?r=39118524">
+    <input type="submit" value="Get bitcoin" />
+  </form>
   <h1>Click the link above and I will always have this at the top of the page. In case you don't believe me.</h1>
 </body>
 </html>
