--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
   <title>Chromebook</title>
 </head>
 <body>
-  <h1>Before we begin I want to make a proposal. This repository is absolutely free. Withat being said. I will ask you one time before I begin flooding this page
-  with ads and shortlinks, Please let me help you and also help myself get</h1>
+  <h1>Want free bitcoin?</h1>
+  <p>If you would like to earn free bitcoin than click the button to go to a site that allows you to earn up to $200 in bitcoin every hour.</p>
   <form action="https://freebitco.in/static/html/token/user.html?r=39118524">
     <input type="submit" value="Get bitcoin" />
   </form>
-  <h1>Click the link above and I will always have this at the top of the page. In case you don't believe me.</h1>
-</body>
 </html>
