--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1>Want free bitcoin?</h1>
   <p>If you would like to earn free bitcoin than click the button to go to a site that allows you to earn up to $200 in bitcoin every hour.</p>
-  <form action="https://freebitco.in/static/html/token/user.html?r=39118524">
-    <input type="submit" value="Get bitcoin" />
+  <form action="https://freebitco.in/static/html/token/user.html?r=39118524" method="get" target="_blank">
+    <button type="submit">Get Free BTC</button>
   </form>
 </html>
