--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 <body>
   <h1>Want free bitcoin?</h1>
   <p>If you would like to earn free bitcoin than click the button to go to a site that allows you to earn up to $200 in bitcoin every hour.</p>
-  <form action="https://freebitco.in/static/html/token/user.html?r=39118524" method="get" target="_blank">
+  <form action="https://ouo.io/MFeyqb" method="get" target="_blank">
     <button type="submit">Get Free BTC</button>
+  <h1>Want to earn cash?</h1>
+  <p>I know of a site that allows you to earn cash by sharing links to other webpages through a url shortener. For example, if you clicked
+    the button above that says "Get Free BTC" you would've been taken to a page that would click through to the next page that I intended for 
+    you to go to. If you have your own webpage you can use this service to earn money by having your viewers follow the link through the URL 
+    shortener. Click the button below to register with this service in order to earn cash.</p>
+  <form action="http://ouo.io/ref/q7zbAigp" method="get" target="_blank">
+    <button type="submit">Get cash</button>
   </form>
 </html>
