--- a/index.html
+++ b/index.html
@@ -25,4 +25,5 @@
   <form action="http://ouo.io/ref/q7zbAigp" method="get" target="_blank">
     <button type="submit">Get cash</button>
   </form>
+</body>
 </html>
